# swc-plugin-react-add-displayname

./: Cargo.toml  package.json
src/: lib.rs
src/tests/: input.tsx  input_decorators.tsx  output.js  output_decorators.js
