[package]
name = "swc_plugin_react_add_displayname"
version = "0.1.0"
edition = "2021"

[profile.release]
# This removes more dead code
codegen-units = 1
lto = true

[lib]
crate-type = ["cdylib"]

[dependencies]
swc_plugin = "0.88.1"
swc_ecma_parser = "0.116.0"
swc_ecma_transforms_base = "0.102.0"

[dev-dependencies]
swc_ecma_transforms_testing = "0.104.0"
testing_macros = "0.2.7"

